<resources>
    <string name="app_name">What did i Learn</string>
    <string name="title">Lorem Ipsum</string>
    <string name="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
        aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
        mollit anim id est laborum.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_save">Salvar</string>
    <string name="learned_item_name">Nome do item aprendido</string>
    <string name="learned_item_description">Descrição do item aprendido</string>
    <string name="item_learned_low">Ruim</string>
    <string name="item_learned_medium">Médio</string>
    <string name="item_learned_high">Bom</string>
    <string name="validatefields">Por Favor, Preencha todos os campos!</string>
</resources>