<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/default_padding"
    tools:context=".view.LearnedItemRegister">

    <EditText
        android:id="@+id/learned_item_name"
        android:layout_width="360dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/learned_item_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.313"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/learned_item_description"
        android:layout_width="360dp"
        android:layout_height="115dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:hint="@string/learned_item_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.313"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/learned_item_name"
        android:importantForAutofill="no" />

    <RadioGroup
        android:layout_width="149dp"
        android:id="@+id/radio"
        android:layout_height="144dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toStartOf="@+id/btn_save"
        app:layout_constraintHorizontal_bias="0.114"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/learned_item_description">

        <RadioButton
            android:id="@+id/item_learned_low"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_learned_low" />

        <RadioButton
            android:id="@+id/item_learned_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_learned_medium" />

        <RadioButton
            android:id="@+id/item_learned_high"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_learned_high" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="240dp"
        android:layout_marginEnd="28dp"
        android:backgroundTint="@color/darker_green"
        android:text="@string/btn_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>